--- a/package.json
+++ b/package.json
@@ -14,30 +14,33 @@
     "schematics:build": "yarn --cwd ./application-webcomponents build",
     "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents",
     "wiztools:publish": "ng build wizpro-tools && npm publish ./dist/wizpro-tools",
-    "start:module": "ng serve --project botafogo",
+    "start:module": "ng serve --project kol",
     "extra:build": "ng build --project botafogo --output-hashing none --aot --build-optimizer",
     "extra:build:staging": "ng build --configuration=staging --project botafogo --output-hashing none --aot --build-optimizer",
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "build:module": "ng build --project kol --output-hashing none --aot --build-optimizer",
+    "build:module:staging": "ng build --configuration staging --project kol --output-hashing none --aot --build-optimizer",
+    "build:module:sandbox": "ng build --configuration sandbox --project kol --output-hashing none --aot --build-optimizer"
   },
   "private": true,
   "dependencies": {
-    "@angular-architects/module-federation": "^17.0.1",
-    "@angular-architects/module-federation-tools": "^17.0.7",
+    "@angular-architects/module-federation": "^17.0.8",
+    "@angular-architects/module-federation-tools": "^17.0.8",
     "@angular/animations": "^17.1.2",
     "@angular/cdk": "^17.2.0",
     "@angular/common": "^17.1.2",
     "@angular/compiler": "^17.1.2",
     "@angular/core": "^17.1.2",
-    "@angular/elements": "^17.1.2",
+    "@angular/elements": "^17.2.2",
     "@angular/forms": "^17.1.2",
     "@angular/platform-browser": "^17.1.2",
     "@angular/platform-browser-dynamic": "^17.1.2",
     "@angular/router": "^17.1.2",
     "@schematics/angular": "^16.2.7",
-    "@wizco/fenixds-core": "^1.0.22",
-    "@wizco/fenixds-ngx": "^17.0.19",
-    "@wizco/wizpro-tools": "^17.0.10",
+    "@wizco/fenixds-core": "^1.0.23",
+    "@wizco/fenixds-ngx": "^17.0.20",
+    "@wizco/wizpro-tools": "^17.0.12",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
