feat: atualização para pipeline b2c

--- a/application-webcomponents/src/env-b2c/root-files/azure-pipelines.yml
+++ b/application-webcomponents/src/env-b2c/root-files/azure-pipelines.yml
@@ -29,4 +29,4 @@ extends:
     produtoDigital: <%= PRODUCT_NAME%>
     nodeVersion: "18.x"
     modulos: 
-      - <%= folderName%>
+<%= PROJECTS_NAMES%>
