--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "test": "ng test",
     "run:clean": "node --experimental-modules ./sripts/run-local.mjs",
     "run:local": "npm run run:clean && npm run schematics:build && npm run schematics:link",
+    "run:local-b2c": "npm run schematics:build && npm run schematics:link",
     "postrun:local": "ng g @wizco/schematics-webcomponents:init",
+    "postrun:local-b2c": "ng g @wizco/schematics-webcomponents:env-b2c",
     "schematics:intall": "yarn --cwd ./application-webcomponents install",
     "schematics:build": "yarn --cwd ./application-webcomponents build",
     "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents",
     "wiztools:publish": "ng build wizpro-tools && npm publish ./dist/wizpro-tools",
-    "start:module": "ng serve --project rural",
+    "start:module": "ng serve --project novidaede",
     "extra:build": "ng build --project botafogo --output-hashing none --aot --build-optimizer",
     "extra:build:staging": "ng build --configuration=staging --project botafogo --output-hashing none --aot --build-optimizer",
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js",
     "lint": "ng lint",
-    "build:module": "ng build --project rural --output-hashing none --aot --build-optimizer",
-    "build:module:staging": "ng build --configuration staging --project rural --output-hashing none --aot --build-optimizer",
-    "build:module:sandbox": "ng build --configuration sandbox --project rural --output-hashing none --aot --build-optimizer"
+    "build:module": "ng build --project novidaede --output-hashing none --aot",
+    "build:module:staging": "ng build --configuration staging --project novidaede --output-hashing none --aot",
+    "build:module:sandbox": "ng build --configuration sandbox --project novidaede --output-hashing none --aot"
   },
   "private": true,
   "dependencies": {
@@ -32,7 +34,7 @@
     "@angular/common": "^17.1.2",
     "@angular/compiler": "^17.1.2",
     "@angular/core": "^17.1.2",
-    "@angular/elements": "^17.2.3",
+    "@angular/elements": "^17.2.4",
     "@angular/forms": "^17.1.2",
     "@angular/platform-browser": "^17.1.2",
     "@angular/platform-browser-dynamic": "^17.1.2",
