--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@wizco/fenixds-core": "^1.0.23",
     "@wizco/fenixds-ngx": "^17.0.20",
     "@wizco/wizpro-tools": "^17.0.12",
-    "jwt-decode": "^3.1.2",
+    "jwt-decode": "4.0.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "^0.14.3"
