fix: corrigir erro de sintaxe no escopo do workflow de release

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           node-version: 18
           registry-url: https://registry.npmjs.org
-          scope: '@wizco'p
+          scope: '@wizco'
           always-auth: true
       - run: |
           npm install 
