refactor: update angular.json for new project structure and dependencies; add local testing guide in execute-local.md

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "postrun:local-b2c": "ng g @wizco/schematics-webcomponents:env-b2c",
     "schematics:intall": "yarn --cwd ./application-webcomponents install",
     "schematics:build": "yarn --cwd ./application-webcomponents build",
+    "schematics:watch": "yarn --cwd ./application-webcomponents watch",
     "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents",
+    "schematics:prepare-external": "npm run schematics:build && npm run schematics:link",
     "wiztools:publish": "ng build wizpro-tools",
     "start:module": "ng serve --project novidaede",
     "extra:build": "ng build --project botafogo --output-hashing none --aot --build-optimizer",
@@ -27,33 +29,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-architects/module-federation": "^17.0.8",
+    "@angular-architects/module-federation": "^20.0.0",
     "@angular-architects/module-federation-tools": "^17.0.8",
     "@angular/animations": "^17.1.2",
     "@angular/cdk": "^17.2.0",
     "@angular/common": "^17.1.2",
     "@angular/compiler": "^17.1.2",
     "@angular/core": "^17.1.2",
-    "@angular/elements": "^17.2.4",
+    "@angular/elements": "^20.3.16",
     "@angular/forms": "^17.1.2",
     "@angular/platform-browser": "^17.1.2",
-    "@angular/platform-browser-dynamic": "^17.1.2",
+    "@angular/platform-browser-dynamic": "^20.3.16",
     "@angular/router": "^17.1.2",
     "@schematics/angular": "^16.2.7",
-    "@wizco/fenixds-core": "^1.0.23",
-    "@wizco/fenixds-ngx": "^17.0.20",
-    "@wizco/wizpro-tools": "^17.0.12",
-    "jwt-decode": "4.0.0",
+    "@wizco/fenixds-core": "^1.6.2",
+    "@wizco/fenixds-ngx": "^17.9.3",
+    "@wizco/wizpro-tools": "^20.2.3",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "^0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.1.2",
+    "@angular-devkit/build-angular": "^20.3.15",
     "@angular-eslint/builder": "17.2.1",
     "@angular-eslint/eslint-plugin": "17.2.1",
     "@angular-eslint/eslint-plugin-template": "17.2.1",
-    "@angular-eslint/schematics": "17.2.1",
     "@angular-eslint/template-parser": "17.2.1",
     "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "^17.1.2",
@@ -68,7 +69,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^17.1.0",
-    "ngx-build-plus": "^17.0.0",
+    "ngx-build-plus": "^20.0.0",
     "typescript": "~5.4.5"
   }
 }
