--- a/application-webcomponents/src/template-webcomponents/other-files/app.component.ts.template
+++ b/application-webcomponents/src/template-webcomponents/other-files/app.component.ts.template
@@ -1,19 +1,22 @@
-import { Component, EventEmitter, Input, Output, ViewEncapsulation, AfterViewInit } from '@angular/core';
-import { Router } from '@angular/router';
+import { CommonModule } from '@angular/common';
+import { Component, EventEmitter, Input, Output, ViewEncapsulation, AfterViewInit, inject } from '@angular/core';
+import { Router, RouterOutlet } from '@angular/router';
+import { WidgetComponent } from './components/widget/widget.component';
 import { WcoService } from '@wizco/wizpro-tools';
 
 @Component({
   selector: '<%= selector %>',
   template: `
-    <ng-container *ngIf="widget">
+    @if(widget) {
       <<%= selector %>-widget/>
-    </ng-container>
-    <ng-container *ngIf="!widget">
+    } @else {
       <router-outlet></router-outlet>
-    </ng-container>
+    }
   `,
   styleUrls: ['./app.component.scss'],
   encapsulation: ViewEncapsulation.None,
+  standalone: true,
+  imports: [RouterOutlet, WidgetComponent, CommonModule],
 })
 
 export class AppComponent implements AfterViewInit {
@@ -21,10 +24,8 @@ export class AppComponent implements AfterViewInit {
   @Input() currentPath!: string;
   @Output() appOutput = new EventEmitter();
 
-  constructor(
-    private router: Router,
-    private wcoService: WcoService
-  ) {}
+  private router = inject(Router);
+  private wcoService = inject(WcoService);
 
   ngAfterViewInit(): void {
     if(!this.widget) {
