refactor: update Angular template files to use bootstrap.ts and adjust layout in index.html

--- a/application-webcomponents/src/template-webcomponents/files/src/bootstrap.ts.template
+++ b/application-webcomponents/src/template-webcomponents/files/src/bootstrap.ts.template
@@ -5,6 +5,6 @@ import { bootstrap } from '@angular-architects/module-federation-tools';
 bootstrap(AppModule, {
   production: environment.production,
   appType: 'microfrontend',
-  activeLegacyMode: true,
-  ngZoneSharing: true
+  activeLegacyMode: false,
+  ngZoneSharing: false,
 });
