--- a/application-webcomponents/src/template-webcomponents/files/src/main.ts.template
+++ b/application-webcomponents/src/template-webcomponents/files/src/main.ts.template
@@ -1,1 +1,10 @@
-import('./bootstrap').catch((err) => console.error(err));
+import { AppModule } from './app/app.module';
+import { environment } from './environments/environment';
+import { bootstrap } from '@angular-architects/module-federation-tools';
+
+bootstrap(AppModule, {
+  production: environment.production,
+  appType: 'shell',
+  activeLegacyMode: false,
+  ngZoneSharing: false,
+});
