--- a/application-webcomponents/src/template-webcomponents/files/src/index.html.template
+++ b/application-webcomponents/src/template-webcomponents/files/src/index.html.template
@@ -13,13 +13,13 @@
 <body>
   <main id="area-faker-wizco">
     <div id="header-faker"></div>
-    <div id="aside-faker"></div>
     <div id="content-faker">
-      <wc-<%= name %>-module></wc-<%= name %>-module>
+      <wc-brasil-module></wc-brasil-module>
     </div>
   </main>
 </body>
 
 <style>
-  #area-faker-wizco { width: 100vw; height: 100vh; display: grid; grid-template-columns: 96px 1fr; grid-template-rows: 84px 1fr; grid-template-areas: 'aside header' 'aside content'; #header-faker { grid-area: header; height: 84px; background-color: var(--wco-color-neutral-50); } #aside-faker { grid-area: aside; width: 96px; height: 100%; background-color: var(--wco-color-primary-50); } #content-faker { grid-area: content; padding: var(--wco-spacing-xs); } } html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; } /* HTML5 display-role reset for older browsers */ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; } body { line-height: 1; }</style>
+#content-faker,.container-wco{padding:var(--wco-spacing-xs)}#area-faker-wizco{width:100vw;display:grid;grid-template-columns:1fr;grid-template-rows:90px 1fr;grid-template-areas:'header' 'content';height:84px;background-color:var(--wco-color-neutral-50)}#content-faker{grid-area:content}a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}body,html,html>body{font-family:var(--wco-font-family)}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1;background-color:var(--wco-color-bg);color:var(--wco-color-neutral-900)}html,html>body{text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;font-size:16px;width:100%;min-width:100%;min-height:100vh;overflow-x:clip}.container-wco{display:flex;border-radius:var(--wco-radius-md);flex-direction:column;align-items:flex-start;background:var(--wco-color-panel)}.container-wco>div{display:block;width:100%}.container-wco>div .line{font-weight:100;opacity:.4;margin:0 3px}
+</style>
 </html>
