chore: update package versions to 1.0.1 and 20.0.1; enable legacy mode and zone sharing in bootstrap template

--- a/application-webcomponents/src/template-webcomponents/files/src/index.html.template
+++ b/application-webcomponents/src/template-webcomponents/files/src/index.html.template
@@ -14,7 +14,7 @@
   <main id="area-faker-wizco">
     <div id="header-faker"></div>
     <div id="content-faker">
-      <wc-brasil-module></wc-brasil-module>
+      <wc-<%= name %>-module></wc-<%= name %>-module>
     </div>
   </main>
 </body>
