--- a/application-webcomponents/src/template-webcomponents/files/src/bootstrap.ts.template
+++ b/application-webcomponents/src/template-webcomponents/files/src/bootstrap.ts.template
@@ -5,6 +5,6 @@ import { bootstrap } from '@angular-architects/module-federation-tools';
 bootstrap(AppModule, {
   production: environment.production,
   appType: 'microfrontend',
-  activeLegacyMode: false,
-  ngZoneSharing: false,
+  activeLegacyMode: true,
+  ngZoneSharing: true,
 });
